<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:textAllCaps="false"
              tools:context="com.nxp.nxp34663.hapticdemo.AdvanceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- show NXP logo -->
        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="@string/strEmpty"
            android:layout_marginTop="1dip"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/logo"/>
        <!-- the 1st row begin -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn10"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:layout_weight="1"
                android:background="@drawable/button_rectangle"
                android:text="@string/strKeyA" />

            <Button
                android:id="@+id/btn11"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_marginStart="5dip"
                android:layout_height="70dip"
                android:layout_weight="1"
                android:background="@drawable/button_rectangle"
                android:text="@string/strKeyB" />

            <Button
                android:id="@+id/btn12"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_marginStart="5dip"
                android:layout_height="70dip"
                android:layout_weight="1"
                android:background="@drawable/button_rectangle"
                android:text="@string/strKeyC" />
        </LinearLayout>

        <!-- the 2nd row begin -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn13"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:background="@drawable/button_rectangle"
                android:layout_weight="1"
                android:text="@string/strKeyD" />

            <Button
                android:id="@+id/btn14"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_marginStart="5dip"
                android:layout_height="70dip"
                android:background="@drawable/button_rectangle"
                android:layout_weight="1"
                android:text="@string/strKeyE" />

            <Button
                android:id="@+id/btn15"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_marginStart="5dip"
                android:layout_height="70dip"
                android:layout_weight="1"
                android:background="@drawable/button_rectangle"
                android:text="@string/strKeyF" />
        </LinearLayout>

        <!-- the 3rd row begin -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn16"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:background="@drawable/button_rectangle"
                android:layout_weight="1"
                android:text="@string/strKeyG" />

            <Button
                android:id="@+id/btn17"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_marginStart="5dip"
                android:layout_height="70dip"
                android:background="@drawable/button_rectangle"
                android:layout_weight="1"
                android:text="@string/strKeyH" />

            <Button
                android:id="@+id/btn18"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_marginStart="5dip"
                android:layout_height="70dip"
                android:layout_weight="1"
                android:background="@drawable/button_rectangle"
                android:text="@string/strKeyI" />
        </LinearLayout>

        <!-- the 4th row begin -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn19"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_height="70dip"
                android:background="@drawable/button_rectangle"
                android:layout_weight="1"
                android:text="@string/strKeyJ" />

            <Button
                android:id="@+id/btn20"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_marginStart="5dip"
                android:layout_height="70dip"
                android:background="@drawable/button_rectangle"
                android:layout_weight="1"
                android:text="@string/strKeyK" />

            <Button
                android:id="@+id/btn21"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_marginStart="5dip"
                android:layout_height="70dip"
                android:background="@drawable/button_rectangle"
                android:layout_weight="1"
                android:text="@string/strKeyL" />
        </LinearLayout>

        <!-- the 5th row begin -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dip"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn22"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_roundness"
                android:visibility="invisible"
                android:layout_weight="1"
                android:text="@string/strKeyM" />

            <Button
                android:id="@+id/btn23"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dip"
                android:background="@drawable/button_roundness"
                android:text="@string/strEmpty" />

            <Button
                android:id="@+id/btn24"
                android:theme="@style/AppTheme.ButtonStyle2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dip"
                android:background="@drawable/button_roundness"
                android:visibility="invisible"
                android:layout_weight="1"
                android:text="@string/strKeyO" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
